ws_tcc/log/build_2025-02-09_10-34-05/tcc/stderr.log
  File "/home/lucas/Documents/GitHub/TCC-robo-limpeza-de-linha/ws_tcc/install/tcc/lib/python3.10/site-packages/tcc/checkpoints_random.py", line 28
    	continue
    	^^^^^^^^
SyntaxError: 'continue' not properly in loop

